# BahnBingo

./: .gitignore  docker-compose.yml  package-lock.json  package.json  svelte.config.js
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
src/lib/: Control.svelte  Game.svelte  Grid.svelte  GridEntry.svelte  Reason.ts  ReasonBuilder.ts
src/lib/components/Footer/: Footer.svelte
src/lib/components/Header/: Header.svelte
src/routes/: +layout.svelte  +page.svelte
website/: .eslintrc.cjs  README.md  package-lock.json  package.json  tailwind.config.ts
website/src/lib/components/Bingo/: Grid.svelte  ReasonBuilder.ts
website/src/lib/components/Footer/: Footer.svelte
website/src/lib/components/Header/: Header.svelte
website/src/lib/components/MetaTikTakToe/: Control.svelte  Grid.svelte  MetaTicTacToe.svelte  TicTacToe.svelte  utils.ts
website/src/lib/components/Navigation/: Navigation.svelte
website/src/lib/components/TicTacToe/: TicTacToe.svelte  utils.ts
website/src/routes/: +layout.svelte  +page.svelte
website/src/routes/bingo/: +page.svelte
website/src/routes/metatictactoe/: +page.svelte
website/src/routes/tictactoe/: +page.svelte
