[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = { version = "0.3.28", default-features = false, features=["sink", "std"] }
tokio = { version = "1.32.0", features = ["io-util", "io-std", "macros", "net", "rt-multi-thread"] }
tokio-tungstenite = "0.20.0"
